add IRC channel

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ $ cd xchataqua
 $ git submodule update --init
 </code></pre>
 
+<h3>IRC</h3>
+<p>Visit <a href="irc://chat.freenode.org/#xchat-aqua">irc://chat.freenode.org/#xchat-aqua</a>.</p>
+
         </article>
       </div>
     </div>
