--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <ul>
   <li>XChat Azure is brand of X-Chat Aqua for Apple Appstore. Download it on <a href="http://itunes.apple.com/app/id447521961">Appstore</a>.</li>
   <li>Download preview or test version on <a href="https://github.com/xchataqua/xchataqua/downloads">Project page</a>.</li>
+  <li>For OS X 10.6, download 1.12.7 from <a href="https://github.com/downloads/xchataqua/xchataqua/XChat%20Azure%201.12.7.pkg">Project download page</a>.</li>
   <li>For OS X older than 10.6, visit <a href="http://sourceforge.net/projects/xchataqua/files/">Source forge</a>.</li>
   <li>See <a href="#source">below</a> about source code.</li>
 </ul>
