Add cocoapod step

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <pre><code>$ git clone git://github.com/xchataqua/xchataqua.git
 $ cd xchataqua
 $ git submodule update --init
+$ pod install # Install cocoapod from http://cocoapods.org before this step
 </code></pre>
 
 <h3>IRC</h3>
