--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h3>About XChat Aqua/Azure</h3>
+          <h3 id="about">About XChat Aqua/Azure</h3>
 
 <p>XChat Aqua/Azure is an <a href="http://en.wikipedia.org/wiki/IRC">IRC</a> client for OS X based on <a href="http://xchat.org/">xchat2</a>.
 </p>
@@ -49,7 +49,7 @@
   <li>XChat Aqua/Azure is OS X native front-end of xchat2 written on Cocoa.</li>
 </ul>
 
-<h3>Download</h3>
+<h3 id="download">Download</h3>
 <ul>
   <li>XChat Azure is brand of X-Chat Aqua for Apple Appstore. Download it on <a href="http://itunes.apple.com/app/id447521961">Appstore</a>.</li>
   <li>Download preview or test version on <a href="http://xchataqua.github.io/downloads/">Download Page</a> or its <a href="https://github.com/xchataqua/downloads">Repository</a>. (There is also <a href="https://github.com/xchataqua/xchataqua/downloads">downloads</a> page for old versions)</li>
@@ -67,7 +67,7 @@ $ git submodule update --init
 $ pod install # Install cocoapod from http://cocoapods.org before this step
 </code></pre>
 
-<h3>IRC</h3>
+<h3 id="irc">IRC</h3>
 <p>Visit <a href="irc://chat.freenode.org/#xchat-aqua">irc://chat.freenode.org/#xchat-aqua</a>.</p>
 
         </article>
