Revert "freenode policy" - Not Yet
This reverts commit af22086c0caa86f01c657ef73562c22ce41b693c.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ $ pod install # Install cocoapod from http://cocoapods.org before this step
 </code></pre>
 
 <h3 id="irc">IRC</h3>
-<p>Visit <a href="irc://chat.freenode.org/#xchataqua">irc://chat.freenode.org/#xchataqua</a>.</p>
+<p>Visit <a href="irc://chat.freenode.org/#xchat-aqua">irc://chat.freenode.org/#xchat-aqua</a>.</p>
 
         </article>
       </div>
