--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 <p>XChat Aqua/Azure is an <a href="http://en.wikipedia.org/wiki/IRC">IRC</a> client for OS X based on <a href="http://xchat.org/">xchat2</a>.
 </p>
 <ul>
-  <li>xchat is mature open source project. It is very popular in linux/unix world.</li>
+  <li>xchat is a mature open source project. It is very popular in the linux/unix world.</li>
   <ul>
     <li>Mature code base</li>
     <li>High-level localization</li>
     <li>Plugin compatibility</li>
   </ul>
-  <li>XChat Aqua/Azure is OS X native front-end of xchat2 written on Cocoa.</li>
+  <li>XChat Aqua/Azure is an OS X native front-end of xchat2 written on Cocoa.</li>
 </ul>
 
 <h3 id="download">Download</h3>
 <ul>
-  <li>XChat Azure is brand of X-Chat Aqua for Apple Appstore. Download it on <a href="http://itunes.apple.com/app/id447521961">Appstore</a>.</li>
-  <li>Download preview or test version on <a href="./downloads/">Download Page</a> or its <a href="https://github.com/xchataqua/downloads">Repository</a>. (There is also <a href="https://github.com/xchataqua/xchataqua/downloads">downloads</a> page for older versions)</li>
+  <li>XChat Azure is a brand of X-Chat Aqua for Apple Appstore. Download it from the <a href="http://itunes.apple.com/app/id447521961">App Store</a>.</li>
+  <li>Download a preview or test version on <a href="https://github.com/xchataqua/xchataqua/releases/">Github releases</a> or its <a href="https://github.com/xchataqua/downloads">Repository</a></li>
   <li>For OS X 10.6, download 1.12.7 from <a href="https://github.com/downloads/xchataqua/xchataqua/XChat%20Azure%201.12.7.pkg">Project download page</a>.</li>
   <li>For OS X older than 10.6, visit <a href="http://sourceforge.net/projects/xchataqua/files/">Source forge</a>.</li>
   <li>See <a href="#source">below</a> about source code.</li>
@@ -89,7 +89,7 @@ $ pod install # Install cocoapod from http://cocoapods.org before this step
     <p class="name"></p>
   </div>
 
-  
+
 <!-- GitHub Ribbon -->
   <a href="http://github.com/xchataqua/xchataqua">
     <img style="position: absolute; top: 0; right: 0; border: 0;"
